# skillpod-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cspell.config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: skillfile.yml
openspec/: config.yaml
openspec/changes/add-skillpod-adapter-layer/: design.md  proposal.md  tasks.md
openspec/changes/add-skillpod-adapter-layer/specs/installer/: spec.md
openspec/changes/add-skillpod-groups/: proposal.md  tasks.md
openspec/changes/add-skillpod-groups/specs/cli/: spec.md
openspec/changes/add-skillpod-groups/specs/installer/: spec.md
openspec/changes/add-skillpod-mvp-install/: design.md  proposal.md  tasks.md
openspec/changes/add-skillpod-mvp-install/specs/lockfile/: spec.md
openspec/changes/add-skillpod-mvp-install/specs/registry-discovery/: spec.md
openspec/changes/add-skillpod-trust-and-search/: proposal.md  tasks.md
openspec/changes/add-skillpod-trust-and-search/specs/cli/: spec.md
openspec/changes/add-skillpod-trust-and-search/specs/manifest/: spec.md
openspec/changes/archive/2026-04-27-add-skillpod-adapter-layer/: tasks.md
openspec/changes/archive/2026-04-27-add-skillpod-adapter-layer/specs/cli/: spec.md
openspec/changes/archive/2026-04-27-add-skillpod-groups/specs/manifest/: spec.md
openspec/changes/archive/2026-04-27-add-skillpod-mvp-install/specs/cli/: spec.md
openspec/changes/archive/2026-04-27-add-skillpod-mvp-install/specs/installer/: spec.md
openspec/changes/archive/2026-04-27-add-skillpod-mvp-install/specs/manifest/: spec.md
openspec/changes/archive/2026-04-27-add-skillpod-mvp-install/specs/source-resolver/: spec.md
openspec/changes/archive/2026-04-27-add-skillpod-trust-and-search/specs/registry-discovery/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/installer/: spec.md
openspec/specs/lockfile/: spec.md
openspec/specs/manifest/: spec.md
openspec/specs/registry-discovery/: spec.md
openspec/specs/source-resolver/: spec.md
plans/: generic-weaving-patterson.md  linked-leaping-seal.md  parallel-orbiting-avalanche.md  proud-inventing-biscuit.md  purrfect-forging-hartmanis.md  rustling-wishing-starlight.md  skillpod-plan.md
src/skillpod/: __init__.py
src/skillpod/cli/: __init__.py  _output.py  app.py
src/skillpod/cli/commands/: adapter.py  add.py  doctor.py  global_archive.py  global_doctor.py  global_list.py  init.py  install_cmd.py  list_cmd.py  outdated.py  remove.py  schema.py  search.py  sync.py  update.py
src/skillpod/installer/: __init__.py  adapter.py  adapter_default.py  adapter_registry.py  errors.py  expand.py  fanout.py  global_install.py  paths.py  pipeline.py  resolve.py  user_skills.py
src/skillpod/lockfile/: __init__.py  integrity.py  io.py  models.py
src/skillpod/manifest/: __init__.py  loader.py  models.py
src/skillpod/registry/: __init__.py  errors.py  skills_sh.py  trust.py
src/skillpod/schemas/: __init__.py  skillfile.schema.json
src/skillpod/sources/: __init__.py  cache.py  discovery.py  errors.py  git.py  local.py  resolver.py  spec.py  types.py
tests/: _git_fixtures.py  conftest.py  test_adapters.py  test_cli.py  test_cli_add_source.py  test_discovery.py  test_installer.py  test_lockfile.py  test_manifest.py  test_registry.py  test_registry_integration.py  test_smoke.py  test_sources.py  test_sources_spec.py
